# clip_playground

./: .dockerignore  Dockerfile  README.md  app.py  pyproject.toml
templates/: index.html
